# overseas-platform-v0.1

./: .env.production.example  .gitignore  CLAUDE.md  RBAC与组织架构设计_v0.1.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_initial_schema.py  20260518_0002_add_user_username.py  20260520_0003_phone_unique_and_buyer_usc.py  20260520_0004_supplier_register_country_code.py  20260521_0005_add_categories.py  (+6 more)
backend/app/: main.py  seed.py  seed_catalog.py  seed_credit.py
backend/scripts/: audit_query.sh  credit_smoke_test.py  import_categories.py  reset_db.sh  verify.sh
backend/tests/: _harvest_fakes.py  conftest.py  test_admin_users_disable.py  test_ai_summary_api.py  test_audit.py  test_audit_query.py  test_auth.py  test_cambodia_data_source.py  test_cambodia_no_mock.py  test_catalog.py  test_categories.py  test_credit_scope.py  test_evaluation_status_field.py  test_harvest_anti_hallucination.py  test_harvest_cache.py  test_harvest_failure_fallback.py  test_harvest_search_refinement.py  test_harvest_source_traceability.py  test_harvest_task_integration.py  test_import_categories.py  test_manual_harvest_api.py  test_me.py  test_phone_login.py  test_public_web_harvester.py  test_qwen_generate_json.py  test_rbac.py  test_register_buyer_usc.py  test_scope.py  test_seed_demo_switch.py  test_supplier_regno_validation.py  test_suppliers.py  test_tavily_client.py  test_token_cookie.py
deploy/: README.md  (+2 more)
(+290 files in other folders)
